@@ -1,4 +1,7 @@
-2006-11-11 Fixed bug that broke Numeric compatibility - EF
+2006-11-11 Fixed bug that broke Numeric compatibility;
+           added support for alpha to colorbar.  The
+           alpha information is taken from the mappable
+           object, not specified as a kwarg. - EF
 
 2006-11-05 Added broken_barh function for makring a sequence of
 horizontal bars broken by gaps -- see examples/broken_barh.py
